--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "@rahulrajdahal/react-components",
   "publishConfig": {
-    "@rahulrajdahal:registry": "https://npm.pkg.github.com/rahulrajdahal"
+    "registry": "https://npm.pkg.github.com/rahulrajdahal"
   },
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "rollup -c",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build": "rollup -c"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -18,14 +16,6 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.4",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-webpack4": "^6.5.10",
-    "@storybook/manager-webpack4": "^6.5.10",
-    "@storybook/react": "^6.5.10",
-    "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.17",
     "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.2.5",
